# ai-content-factory

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  upwork_description.md
.github/workflows/: ci.yml
app/: __init__.py  card_generator.py  config.py  niche_history.py  platform_renderers.py
make_blueprints/: 00_factory_overview.py  03_writer.py  06_publisher_telegram.py  07_stacks_publisher.py  08_publisher_multi.py  __init__.py  _builder.py
screenshots/: README.md  mockups.html  render.py
scripts/: backup_blueprints.py  create_notion_dbs.py  seed_notion_dbs.py
seeds/: sources_seed.csv
tests/: conftest.py  test_blueprints.py  test_card_generator.py  test_config.py  test_platform_renderers.py
